# digital-voting

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.github/workflows/: rust.yml
src/: blockchain.rs  json_base64.rs  lib.rs  logging.rs  main.rs  state.rs
src/api/: cli.rs  config.rs  mod.rs  protocol.rs  server.rs  server_cli.rs
src/batcher/: mod.rs
src/blockchain/: mod.rs
src/chain/: blockchain.rs
src/commitment/: commitment_scheme.rs
src/set_membership/: merkle.rs  mod.rs  poseidon_chip.rs  poseidon_hasher.rs  set_membership_circuit.rs
src/set_membership_zkp/: merkle.rs  mod.rs  poseidon_chip.rs  poseidon_hasher.rs  set_membership.rs  set_membership_circuit.rs
src/signature/: blind_signature.rs  digital_signature.rs  mod.rs
src/utils/: byte_ops.rs
subcrates/blockchain/: Cargo.toml
subcrates/blockchain/src/: block.rs  blockchain.rs  lib.rs  storage.rs
subcrates/client/: Cargo.toml  README.md  TrunkExtension.toml  index.html  manifest.json  popup.html  popup.js
subcrates/client/src/: authentication.rs  blockchain_selection.rs  candidate_selection.rs  fetch.rs  main.rs  settings.rs  state.rs  storage.rs  utils.rs  validation.rs  verification.rs  vote.rs
subcrates/client/src/states/: access_tokens.rs  blockchain.rs  candidate.rs  config.rs  mod.rs  signature.rs  user.rs  validators.rs
subcrates/crypto/: Cargo.toml
subcrates/crypto/src/: commitment.rs  hash_storage.rs  lib.rs  merkle.rs  utils.rs
subcrates/crypto/src/commitment/: commitment_scheme.rs  mod.rs  scheme.rs
subcrates/crypto/src/encryption/: symmetric.rs
subcrates/crypto/src/set_membership_zkp/: merkle.rs  poseidon_chip.rs  poseidon_hasher.rs  set_membership.rs  set_membership_circuit.rs
subcrates/crypto/src/signature/: blind_sign.rs  blind_signature.rs  digital_sign.rs  digital_signature.rs  mod.rs
subcrates/crypto/src/utils/: mod.rs
subcrates/mock_authority/: Cargo.toml  build.rs  readme.md
subcrates/mock_authority/frontend/: Cargo.toml  index.html
subcrates/mock_authority/frontend/src/: main.rs
subcrates/mock_authority/src/: cli.rs  main.rs  server.rs
subcrates/process_io/: Cargo.toml
subcrates/process_io/src/: cli.rs  lib.rs  logging.rs  storage.rs
subcrates/protocol/: Cargo.toml
subcrates/protocol/src/: candidate.rs  candidate_id.rs  config.rs  lib.rs  timestamp.rs  vote.rs
testing/: .env  Dockerfile  aggregate-blockchain-config.sh  aggregate-election-config.sh  clean.sh  docker-compose.yml  readme.md  requirements.sh  run.sh  startup.sh  stop.sh
tests/: integration_tests.rs
