[package]
name = "digital-voting"
version = "0.1.0"
edition = "2021"
description = """
A system for both private and transparent electronic elections
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"
default-run = "node"

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "authority"
path = "src/bin/mock-authority/main.rs"

[workspace]
resolver = "2"
members = [
	"subcrates/*",
]

[workspace.dependencies]
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
ring = "0.17.8"
base64 = "0.22.1"
serde_with = { version = "3.12.0", features = ["base64"] }
tracing-subscriber = "0.3.19"
wasm-bindgen-test = "0.3.50"
bincode = "1.3.3"
serde_json = "1.0.138"

crypto = { version = "*", path = "./subcrates/crypto" }
protocol = { version = "*", path = "./subcrates/protocol" }
process_io = { version = "*", path = "./subcrates/process_io" }
blockchain = { version = "*", path = "./subcrates/blockchain" }

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"
tracing-actix-web = "0.7.15"
tokio = { version = "1.43.0", features = ["full", "test-util"] }

ring.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_with.workspace = true
base64.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
serde_json.workspace = true

crypto.workspace = true
protocol.workspace = true
process_io.workspace = true
blockchain.workspace = true

[profile.release]
lto = true
