[package]
name = "digital-voting"
version = "0.1.0"
edition = "2021"
description = """
A system for both private and transparent electronic elections
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"
default-run = "node"

[[bin]]
name = "node"
path = "src/main.rs"

[workspace]
resolver = "2"
members = [
	"subcrates/*",
	"subcrates/mock_authority/frontend"
]

[workspace.dependencies]
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
ring = "=0.17.8"
base64 = "0.22.1"
serde_with = { version = "3.12.0", features = ["base64"] }
tracing-subscriber = "0.3.19"
wasm-bindgen-test = "0.3.50"
bincode = "1.3.3"
serde_json = "1.0.138"
anyhow = "1.0.95"
actix-cors = "0.7.0"
actix-web = "4.9.0"
clap = { version = "4.5.29", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full", "test-util"] }
tracing-actix-web = "0.7.15"
leptos = { version = "0.7.7", features = ["csr", "tracing"] }
console_error_panic_hook = "0.1.7"
reqwasm = "0.5.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures = "0.3.31"
leptos-use = { version = "0.15.5", default-features = false, features = ["use_clipboard", "storage"] }
blake3 = { version = "1.5.5", features = ["traits-preview"] }

crypto = { version = "*", path = "./subcrates/crypto" }
protocol = { version = "*", path = "./subcrates/protocol" }
process_io = { version = "*", path = "./subcrates/process_io" }
blockchain = { version = "*", path = "./subcrates/blockchain" }

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
blake3.workspace = true
clap.workspace = true
tracing-actix-web.workspace = true
tokio.workspace = true
anyhow.workspace = true
ring.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_with.workspace = true
base64.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
serde_json.workspace = true

crypto.workspace = true
protocol.workspace = true
process_io.workspace = true
blockchain.workspace = true

# TODO Remove this:
# This is so that `udeps` doesn't complain about blockchain subcrate not being used yet,
# but the various CI tools can still check it.
[package.metadata.cargo-udeps.ignore]
normal = [ "blockchain" ]

[profile.release]
lto = true
