[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
description = """
Generic blockchain code
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[dependencies]
digest = "0.10.7"

thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
blake3.workspace = true
bincode.workspace = true

crypto.workspace = true
protocol.workspace = true
process_io.workspace = true

[dev-dependencies]
tempfile = "3.16.0"
