[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
description = """
Generic blockchain code
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[dependencies]
digest = "0.10.7"

thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
bincode.workspace = true

crypto.workspace = true
protocol.workspace = true
process_io.workspace = true

[dev-dependencies]
blake3.workspace = true
# This is useful for running tests that interract on he file system, but polluting the
# file system with leftover files.
tempfile = "3.16.0"
