[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = """
Front end client for private and transparent electronic elections
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[dependencies]
leptos = { version = "0.6.15", features = ["csr", "tracing"] }
console_error_panic_hook = "0.1.7"
leptos-use = { version = "0.13.10", default-features = false, features = ["use_clipboard", "storage"] }
tracing-subscriber-wasm = "0.1.0"
serde_json = "1.0.132"
codee = { version = "0.2.0", features = ["json_serde"] }
anyhow = "1.0.91"
# reqwasm = "0.5.0"

thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

crypto.workspace = true
protocol.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
