[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = """
Front end client for private and transparent electronic elections
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[dependencies]
codee = { version = "0.3.0", features = ["json_serde"] }
anyhow = "1.0.91"

leptos-use.workspace = true
futures.workspace = true
gloo-timers.workspace = true
reqwasm.workspace = true
console_error_panic_hook.workspace = true
tracing-subscriber-wasm.workspace = true
leptos.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde_json.workspace = true

crypto.workspace = true
protocol.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
