[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = """
Cryptography for both private and transparent electronic elections
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/your/repo"


[dependencies]
rand = "0.8.5"
# TODO keep in mind that halo2 paralellism may be an issue with Tokio
halo2_proofs = { git = "https://github.com/ThrasherLT/halo2.git", branch = "ThrasherLT/VerifyingKey-serialization" }
halo2_gadgets = { git = "https://github.com/ThrasherLT/halo2.git", branch = "ThrasherLT/VerifyingKey-serialization" }
blind-rsa-signatures = "0.15.1"

# wasm-bindgen = "0.2.93"

ring.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
