[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = """
Cryptography for both private and transparent electronic elections
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
blind-rsa-signatures = "0.15.1"

ring = { workspace = true, features = ["wasm32_unknown_unknown_js"] }
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
base64.workspace = true
serde_with.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
