[package]
name = "mock_authority"
version = "0.1.0"
edition = "2021"
description = """
Mock authority for testing the voting system
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[[bin]]
name = "authority"
path = "src/main.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
actix-cors.workspace = true
actix-web.workspace = true
clap.workspace = true
tracing-actix-web.workspace = true
tokio.workspace = true
tracing.workspace = true

crypto.workspace = true
process_io.workspace = true
actix-files = "0.6.6"
