[package]
name = "process_io"
version = "0.1.0"
edition = "2021"
description = """
Code required for code common to process IO
"""
publish = false
license = "Apache-2.0"
repository = "https://github.com/ThrasherLT/digital-voting"

[dependencies]
rustyline = { version = "15.0.0", features = ["derive"] }
shellwords = "1.1.0"
tracing-appender = "0.2.3"
redb = "2.4.0"

tracing-subscriber.workspace = true
tracing = { workspace = true, features = ["max_level_trace", "release_max_level_trace"] }
thiserror.workspace = true

[dev-dependencies]
# This is useful for running tests that interract on he file system, but polluting the
# file system with leftover files.
tempfile = "3.16.0"
